# drf-audit-trail

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  audit_trail.sqlite3  docker-compose.yml  main  pyproject.toml  requirements.txt  utils.py
compose/django/: start.sh
compose/nginx/: Dockerfile  nginx.conf
config/: api_router.py  settings.py  urls.py
core/: models.py  views.py
core/api/: serializers.py  views.py
core/migrations/: 0001_initial.py
core/process_audit/: __init__.py  create_product_process_audit.py  delete_product_process_audit.py  logout_process_audit.py
docs/: Untitled Diagram.drawio  diagrams.drawio
drf_audit_trail/: admin.py  apps.py  database_router.py  fields.py  mixins.py  process_audit.py  settings.py  tests.py  utils.py  views.py
drf_audit_trail/api/: views.py
drf_audit_trail/integrations/: rest_framework_authenticators.py  rest_framework_simplejwt.py
drf_audit_trail/managers/: __init__.py  login_audit_event_manager.py  request_audit_event_manager.py
drf_audit_trail/middleware/: __init__.py  request_login_audit_event.py
drf_audit_trail/migrations/: 0001_initial.py  0002_alter_loginauditevent_request.py  0002_requestauditevent_request_body_and_more.py  0003_alter_requestauditevent_error_type_and_more.py  0003_alter_requestauditevent_user.py  0004_processauditevent_stepauditevent_and_more.py  0005_alter_loginauditevent_table_and_more.py
drf_audit_trail/models/: __init__.py  login_audit_event.py  process_audit_event.py  request_audit_event.py
drf_audit_trail/templates/: performance_graph.html  report_pdf.html
drf_audit_trail/templatetags/: custom_filter.py
